# secure-chat

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.codex/environments/: environment.toml
.github/workflows/: ci.yml
apps/android/SecureChatAndroid/: README.md  settings.gradle.kts
apps/android/SecureChatAndroid/app/: build.gradle.kts  proguard-rules.pro
apps/android/SecureChatAndroid/app/src/androidTest/java/dev/securechat/android/core/: CoreFlowsInstrumentedTest.kt
apps/android/SecureChatAndroid/app/src/main/: AndroidManifest.xml
apps/android/SecureChatAndroid/app/src/main/java/dev/securechat/android/: MainActivity.kt
apps/android/SecureChatAndroid/app/src/main/java/dev/securechat/android/core/: AppModels.kt  SecureChatCoreClient.kt  SecureChatInput.kt  SecureChatNative.kt  SecureChatViewModel.kt  SecureClipboard.kt
apps/android/SecureChatAndroid/app/src/main/java/dev/securechat/android/ui/: SecureChatApp.kt
apps/android/SecureChatAndroid/app/src/main/res/drawable/: ic_secure_chat.xml
apps/android/SecureChatAndroid/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
apps/android/SecureChatAndroid/app/src/test/java/dev/securechat/android/core/: SecureChatInputTest.kt
apps/ios/SecureChatIOS/SecureChatIOS/: Info.plist  SecureChatIOSApp.swift
apps/ios/SecureChatIOS/SecureChatIOS.xcodeproj/: project.pbxproj
apps/ios/SecureChatIOS/SecureChatIOS.xcodeproj/xcshareddata/xcschemes/: SecureChatIOS.xcscheme
apps/ios/SecureChatIOS/SecureChatIOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/ios/SecureChatIOS/SecureChatIOS/Models/: AppModels.swift
apps/ios/SecureChatIOS/SecureChatIOS/Services/: Clipboard.swift  NotificationService.swift  PushRegistrationService.swift  SecureChatCoreClient.swift
apps/ios/SecureChatIOS/SecureChatIOS/Stores/: SecureChatStore.swift
apps/ios/SecureChatIOS/SecureChatIOS/Views/: AddContactView.swift  ChatView.swift  ConversationListView.swift  InviteView.swift  LoginView.swift  RootView.swift  SettingsView.swift
apps/macos/SecureChatMac/: Package.swift
apps/macos/SecureChatMac/Resources/: SecureChatMac.icns
apps/macos/SecureChatMac/Sources/SecureChatFFI/: module.modulemap
apps/macos/SecureChatMac/Sources/SecureChatFFI/include/: secure_chat_ffi.h
apps/macos/SecureChatMac/Sources/SecureChatMac/App/: SecureChatMacApp.swift
apps/macos/SecureChatMac/Sources/SecureChatMac/Models/: DemoModels.swift
apps/macos/SecureChatMac/Sources/SecureChatMac/Services/: NotificationService.swift  PushRegistrationService.swift  SecureChatCoreClient.swift
apps/macos/SecureChatMac/Sources/SecureChatMac/Stores/: SecureChatStore.swift
apps/macos/SecureChatMac/Sources/SecureChatMac/Support/: Clipboard.swift
apps/macos/SecureChatMac/Sources/SecureChatMac/Views/: ChatDetailView.swift  ContentView.swift  DiagnosticsPanelView.swift  LoginView.swift  MessengerView.swift  SafetyPanelView.swift  SettingsView.swift  SidebarView.swift  TransportPanelView.swift
apps/windows/SecureChatWindows/: App.xaml  App.xaml.cs  GlobalUsings.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SecureChatWindows.csproj  SecureChatWindows.sln  app.manifest
apps/windows/SecureChatWindows/Models/: FfiModels.cs
apps/windows/SecureChatWindows/Services/: SecureChatCoreClient.cs  SecureChatNative.cs
apps/windows/SecureChatWindows/ViewModels/: MainViewModel.cs  ObservableObject.cs
crates/secure-chat-client/: Cargo.toml
crates/secure-chat-client/src/: lib.rs
crates/secure-chat-core/: Cargo.toml
crates/secure-chat-core/src/: crypto.rs  group.rs  identity.rs  invite.rs  lib.rs  protocol.rs  relay_api.rs  safety.rs  transport.rs
crates/secure-chat-desktop/: Cargo.toml
crates/secure-chat-desktop/src/: lib.rs
crates/secure-chat-ffi/: Cargo.toml
crates/secure-chat-ffi/include/: module.modulemap  secure_chat_ffi.h
crates/secure-chat-ffi/src/: lib.rs
crates/secure-chat-relay/: Cargo.toml
crates/secure-chat-relay/src/: lib.rs  main.rs
deploy/: chatrelay-manager.sh  copy-letsencrypt-certs.sh  install-relay.sh  relay.env.example  secure-chat-relay.service
docs/: deploy-relay.md  protocol.md
docs/releases/: v0.2.5.md  v0.2.6-windows.md  v0.2.6.md  v0.2.7.md
docs/zh/: client-installation.md  ios-client.md  public-server-deployment.md  security-audit-2026-05-09.md  usage-guide.md  windows-client.md
script/: build_and_run.sh  build_android.sh  build_ios.sh  build_windows.ps1  generate_app_icons.py  package_macos.sh  run_relay.sh
