[workspace]
members = [
    "crates/secure-chat-core",
    "crates/secure-chat-client",
    "crates/secure-chat-desktop",
    "crates/secure-chat-relay",
    "crates/secure-chat-ffi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SecureChat Prototype"]

[workspace.dependencies]
aes-gcm = "0.10"
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hkdf = "0.12"
keyring = { version = "3", features = ["apple-native"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
quinn = "0.11"
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
zeroize = { version = "1", features = ["derive"] }
