[package]
name = "secure-chat-client"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
quinn.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pki-types.workspace = true
secure-chat-core = { path = "../secure-chat-core" }
secure-chat-relay = { path = "../secure-chat-relay" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
webpki-roots.workspace = true

[[bin]]
name = "secure-chat-smoke"
path = "src/bin/secure-chat-smoke.rs"
