[package]
name = "secure-chat-core"
version = "0.2.5"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
openmls.workspace = true
rand_core.workspace = true
serde.workspace = true
serde-big-array.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
