[package]
name = "secure-chat-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
keyring.workspace = true
rusqlite.workspace = true
secure-chat-client = { path = "../secure-chat-client" }
secure-chat-core = { path = "../secure-chat-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

