[package]
name = "secure-chat-ffi"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "secure_chat_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
secure-chat-client = { path = "../secure-chat-client" }
secure-chat-core = { path = "../secure-chat-core" }
secure-chat-desktop = { path = "../secure-chat-desktop" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
