[package]
name = "secure-chat-relay"
version = "0.2.3"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-server.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
quinn.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rusqlite.workspace = true
secure-chat-core = { path = "../secure-chat-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true

[[bin]]
name = "secure-chat-relay"
path = "src/main.rs"
